--- a/main/templates/discover.html
+++ b/main/templates/discover.html
@@ -1,30 +1,32 @@
 {% extends 'base.html' %}
 {% block content %}
+{% include 'navbar.html' %}
 
-<h1> Discover </h1>
 
-{% if not product_list %}
-<p>There are currently no products in stock.</p>
+<div class="max-w-7xl bg-white mx-auto my-12 mt-0 py-10 flex text-center justify-center rounded-2xl">
+    <div class="text-3xl font-bold text-red-800">
+        <h1>Discover</h1>
+    </div>
+</div>
+<div class="max-w-7xl bg-white mx-auto my-12 mt-0 py-10 rounded-2xl px-4">
+    {% if not product_list %}
+    <div class="min-h-screen w-full">
+        <p>There are currently no products in stock.</p>
+    </div>
 
-{% else %}
-{% for product in product_list %}
-<hr/>
-<div>
-    <a href="{% url 'main:show_product' product.id %}"><h2>{{product.name}}</h2></a>
-     | <b>{{product.category}}</b>
-    <br/>
-    <br/>
-    {% if product.thumbnail %} 
-    <img src="{{product.thumbnail}}" alt="thumbnail" width="150" height="150">
-    
-    <br/>
-    Price: {{product.in_rupiah}}
+
+    {% else %}
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+        {% for product in product_list %}
+        {% include 'productcard.html' with product=product %}
+        {% endfor %}
+    </div>
+
+
     {% endif %}
 </div>
+    
 
-{% endfor %}
-
-{% endif %}
 
 
 
