--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,13 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         {% endblock meta %}
-        <script src="https://cdn.tailwindcss.com">
-        <link rel="stylesheet" href="{% static 'css/global.css'}" />
-    </script>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="{% static 'css/global.css' %}" />
     </head>
 
-    <body>
+    <body class="bg-gradient-to-b from-[#a8c0ff] to-[#e7c6ff] pt-24 w-full min-h-screen pb-12">
         {% block content %}
         {% endblock content %}
+        {% include 'toast.html' %}
     </body>
 </html>
