--- a/main/templates/discover.html
+++ b/main/templates/discover.html
@@ -1,22 +1,25 @@
 {% extends 'base.html' %}
+
+{% block meta %}
+<title>NarwhllShop: Discover</title>
+{% endblock meta %}
+
 {% block content %}
 {% include 'navbar.html' %}
 
-
-<div class="max-w-7xl bg-white mx-auto my-12 mt-0 py-10 flex text-center justify-center rounded-2xl">
-    <div class="text-3xl font-bold text-red-800">
+<div class="bg-white flex justify-center text-center rounded-lg mb-6 drop-shadow-md max-w-7xl sm:px-6 lg:px-8 rounded-lg mx-auto">
+    <div class="text-3xl font-bold text-[#a58cd2] my-9">
         <h1>Discover</h1>
     </div>
 </div>
-<div class="max-w-7xl bg-white mx-auto my-12 mt-0 py-10 rounded-2xl px-4">
+<div class="bg-white/90 mx-auto px-4 py-8 max-w-7xl sm:px-6 lg:px-8 rounded-lg drop-shadow-md">
     {% if not product_list %}
     <div class="min-h-screen w-full">
         <p>There are currently no products in stock.</p>
     </div>
 
-
     {% else %}
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {% for product in product_list %}
         {% include 'productcard.html' with product=product %}
         {% endfor %}
