--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -5,7 +5,7 @@
 {% endblock meta %}
 
 {% block content %}
-<div class="bg-gray-50 w-full min-h-screen flex items-center justify-center p-8">
+<div class="w-full min-h-screen flex items-center justify-center p-8 -mt-24 -mb-12 mx-auto">
   <div class="max-w-md w-full">
     <div class="bg-white rounded-lg border border-gray-200 p-6 sm:p-8 form-style">
       <div class="text-center mb-8">
