--- a/main/templates/productcard.html
+++ b/main/templates/productcard.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<article class="bg-white rounded-lg border border-gray-200 hover:shadow-lg transition-shadow duration-300 overflow-hidden">
+<article class="bg-white rounded-lg border border-gray-200 hover:shadow-[0px_4px_6px_0px_rgba(59,_130,_246,_0.5)] transition-shadow duration-300 overflow-hidden">
   <a href="{% url 'main:show_product' product.id %}">
   <!-- Thumbnail -->
   <div class="aspect-[1/1] relative overflow-hidden">
@@ -45,7 +45,7 @@
     <!-- Action Buttons -->
     {% if user.is_authenticated and product.user == user %}
       <div class="flex items-center justify-between pt-4 border-t border-gray-100">
-        <a href="{% url 'main:show_product' product.id %}" class="text-[#d10084] hover:text-green-700 font-medium text-sm transition-colors">
+        <a href="{% url 'main:show_product' product.id %}" class="text-[#d10084] hover:text-[#a58cd2] font-medium text-sm transition-colors">
           Details →
         </a>
         <div class="flex space-x-2">
@@ -59,7 +59,7 @@
       </div>
     {% else %}
       <div class="pt-4 border-t border-gray-100 flex flex-col justify-end">
-        <a href="{% url 'main:show_product' product.id %}" class="text-[#d10084] hover:text-green-700 font-medium text-sm transition-colors">
+        <a href="{% url 'main:show_product' product.id %}" class="text-[#d10084] hover:text-[#a58cd2] font-medium text-sm transition-colors">
           Details →
         </a>
       </div>
