--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="fixed top-0 left-0 w-full bg-white shadow-sm z-50">
+<nav class="fixed top-0 left-0 w-full bg-white/90 shadow-sm z-50 backdrop-blur-md">
     <div class="max-w-7xl mx-auto px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
@@ -16,13 +16,13 @@
         
         <!-- Desktop Navigation -->
         <div class="hidden md:flex items-center space-x-8">
-          <a href="/" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
+          <a href="/" class="text-gray-600 hover:text-gray-900 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
             Home
           </a>
-          <a href="{% url 'main:show_catalogue' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
+          <a href="{% url 'main:show_catalogue' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
             All Products
           </a> 
-          <a href="{% url 'main:create_product' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
+          <a href="{% url 'main:create_product' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
             Add Product
           </a> 
         </div>
@@ -34,14 +34,14 @@
               <div class="text-sm font-medium text-gray-900">{{ name|default:user.username }}</div>
               <div class="text-xs text-gray-500">{{ npm|default:"Student" }} - {{ class|default:"Class E" }}</div>
             </div>
-            <a href="{% url 'main:logout_user' %}" class="text-red-600 hover:text-red-700 font-medium transition-colors">
+            <a href="{% url 'main:logout_user' %}" class="text-red-600 hover:text-red-700 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
               Logout
             </a>
           {% else %}
-            <a href="{% url 'main:login_user' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
+            <a href="{% url 'main:login_user' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
               Login
             </a>
-            <a href="{% url 'main:register' %}" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded font-medium transition-colors">
+            <a href="{% url 'main:register' %}" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
               Register
             </a>
           {% endif %}
