--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
 
     <body class="bg-gradient-to-b from-[#a8c0ff] to-[#e7c6ff] pt-24 w-full min-h-screen pb-12">
         {% block content %}
+        {% include 'modal.html' %}
+        
         {% endblock content %}
         {% include 'toast.html' %}
     </body>
