--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,7 @@
 {% load static %}
+{% include 'base.html' %}
 
-<nav class="fixed top-0 left-0 w-full bg-white/90 shadow-sm z-50 backdrop-blur-md">
+<nav class="fixed top-0 left-0 w-full bg-white/90 shadow-sm z-40 backdrop-blur-md">
     <div class="max-w-7xl mx-auto px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
@@ -25,6 +26,9 @@
           <a href="{% url 'main:create_product' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
             Add Product
           </a> 
+          <button onclick="showModal()" class="text-gray-600 hover:text-gray-900 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
+            Add Product by AJAX
+          </button>
         </div>
         
         <!-- Desktop User Section -->
@@ -32,7 +36,7 @@
           {% if user.is_authenticated %}
             <div class="text-right">
               <div class="text-sm font-medium text-gray-900">{{ name|default:user.username }}</div>
-              <div class="text-xs text-gray-500">{{ npm|default:"Student" }} - {{ class|default:"Class E" }}</div>
+              <div class="text-xs text-gray-500">{{ npm|default:"2406409504" }} - {{ class|default:"Class E" }}</div>
             </div>
             <a href="{% url 'main:logout_user' %}" class="text-red-600 hover:text-red-700 font-medium transition-colors hover:bg-gray-300 p-2 rounded-2xl">
               Logout
@@ -74,6 +78,9 @@
           <a href="{% url 'main:show_catalogue' %}" class="block text-gray-600 hover:text-gray-900 font-medium py-3 transition-colors">
             All Products
           </a>
+          <button onclick="showModal()" class="block text-gray-600 hover:text-gray-900 font-medium py-3 transition-colors">
+            Add Product by AJAX
+          </button>
         </div>
         
         <!-- Mobile User Section -->
