--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,18 @@
 <html lang="en">
     <head>
         {% block meta %} 
+        <title>NarwhllShop</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         {% endblock meta %}
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="{% static 'css/global.css' %}" />
+        <link rel="icon" href="{% static 'image/narwhal.png' %}" type="image/png">
     </head>
 
     <body class="bg-gradient-to-b from-[#a8c0ff] to-[#e7c6ff] pt-24 w-full min-h-screen pb-12">
         {% block content %}
         {% include 'modal.html' %}
-        
         {% endblock content %}
         {% include 'toast.html' %}
     </body>
